kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mycompany-api-service
spec:
  type: LoadBalancer
  selector:
    app: mycompany-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
